load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_image",
    "container_push",
)

container_image(
    name = "image",
    base = "@cc_base//image",
    cmd = ["/dns"],
    files = ["//dns"],
)

container_push(
    name = "push-image",
    format = "Docker",
    image = ":image",
    registry = "{STABLE_DOCKER_REGISTRY}",
    repository = "{STABLE_DOCKER_IMAGE_PREFIX}dns-stress-test",
    stamp = True,
    tag = "{STABLE_DOCKER_TAG}",
)

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
        "sampler.go",
    ],
    importpath = "k8s.io/dns/tools/dns-stress-test/dns",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_golang_glog//:go_default_library",
        "@go_googleapis//google/api:monitoredres_go_proto",
        "@io_opencensus_go//stats/view:go_default_library",
        "@io_opencensus_go//trace:go_default_library",
        "@io_opencensus_go_contrib_exporter_stackdriver//:go_default_library",
    ],
)

go_binary(
    name = "dns",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["main_test.go"],
    embed = [":go_default_library"],
)

# ------

load("@io_bazel_rules_k8s//k8s:object.bzl", "k8s_object")

k8s_object(
    name = "currentk8s",

    # A template of a Kubernetes Deployment object yaml.
    template = ":k8s/manifest-gke.yaml",
    cluster = "{STABLE_K8S_CLUSTER}",
    images = {
        "k8s.gcr.io/dns-stress-test:latest": ":image",
    },
    image_chroot = "{STABLE_DOCKER_REGISTRY}/{STABLE_DOCKER_IMAGE_PREFIX}",
)
